# openobserve-lambda-extension

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  deployment-info-arm64.txt  deployment-info-x86_64.txt  design.md  telemetry_api.md
src/: config.rs  extension.rs  main.rs  openobserve.rs  telemetry.rs
tests/: cli_integration_tests.rs  config_integration_tests.rs  debug_health_check.rs  error_handling_tests.rs  extension_lifecycle_tests.rs  mock_server_test.rs
tests/common/: mod.rs
