[package]
name = "o2-lambda-extension"
version = "0.1.0"
edition = "2021"
description = "AWS Lambda Extension for forwarding logs to OpenObserve"
license = "MIT"

[[bin]]
name = "o2-lambda-extension"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
http = "0.2"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
url = "2.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true